--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <article class="article">
-    <div class="introduction">
+    <section class="section introduction">
       <div class="container">
         <h1 class="title">Отступы в вёрстке: margin и padding</h1>
 
@@ -31,9 +31,9 @@
           поговорим о фундаментальных основах работы с отступами в вёрстке.
         </p>
       </div>
-    </div>
+    </section>
 
-    <div class="content">
+    <section class="section content">
       <div class="container container_gray">
         <h2 class="subtitle">Содержание:</h2>
         <ol class="content__list">
@@ -49,7 +49,7 @@
           </li>
         </ol>
       </div>
-    </div>
+    </section>
 
     <section class="section from-to" id="from-to">
       <div class="container">
@@ -200,7 +200,7 @@
       </div>
     </section>
 
-    <div class="result">
+    <section class="section result">
       <div class="container container_gray">
         <h2 class="subtitle">Подытожим:</h2>
 
@@ -218,7 +218,7 @@
           угоду дизайнерского решения или простоты вёрстки. Но для этого эти принципы необходимо хорошо знать.
         </p>
       </div>
-    </div>
+    </section>
   </article>
 </body>
 
